LENLS: Finishing the Conclusion

--- a/lenls/paper.tex
+++ b/lenls/paper.tex
@@ -775,14 +775,21 @@ the problem of expressing a multitude of linguistic constraints. We have
 examined previous techniques and found no satisfying solution. We have thus
 provided an extension of the ACG formalism to solve the problem and justified
 the need for the increased expressivity. This embedding of syntactic
-constraints will be used to define a syntax-semantics interface and then to
-build discourse structures.
+constraints will contribute to an effort to define a syntax-semantics
+interface and later to build discourse structures.
 
-In the end, this lets us define the syntax in a clean way using the idiomatic
-style of categorial grammars (simple atomic types like $N$, $NP$ and $S$) and
-then define the constraints themselves the same way as they are defined in
-papers which try to formalize them individually (such as is the case with
+In the end, our approach us define the syntax in a clean way using the
+idiomatic style of categorial grammars (simple atomic types like $N$, $NP$ and
+$S$) and then define the constraints themselves the same way as they are
+defined in ACG research (such as is the case with
 \cite{pogodalla2012controlling}).
+
+Interesting avenues of future work include: digging deeper into the
+language-theoretical properties of G-ACGs (Are ACG object languages closed on
+intersection? Are pangraphical languages expressible as extrinsic languages?),
+searching for a metagrammatical description of constraint signatures to ease
+work on G-ACG grammars and finally building large-scale grammars to verify the
+utility of our approach.
 
 %
 % ---- Bibliography ----
