LENLS: Fixed the affiliations

--- a/lenls/paper.tex
+++ b/lenls/paper.tex
@@ -42,17 +42,19 @@
 %                                    also used for the TOC unless
 %                                    \toctitle is used
 %
-\author{Jiří Maršík\inst{1,2} \and Maxime Amblard\inst{1,2}}
+\author{Jiří Maršík\inst{1,2,3} \and Maxime Amblard\inst{1,2,3}}
 %
 \authorrunning{Maršík et al.} % abbreviated author list (for running head)
 %
 %%%% list of authors for the TOC (use if author list has to be modified)
 \tocauthor{Jiří Maršík and Maxime Amblard}
 %
-\institute{Université de Lorraine, LORIA, Nancy, 54000, France\\
+\institute{Université de Lorraine, Laboratoire lorrain de recherche en informatique et ses applications, UMR 7503, Vandoeuvre-lès-Nancy, 54500, France\\
 \email{\{jiri.marsik, maxime.amblard\}@loria.fr},\\
 \and
-INRIA, Nancy, 54000, France}
+INRIA, Villers-lès-Nancy, 54600, France\\
+\and
+CNRS, Loria, Vandoeuvre-lès-Nancy, UMR 7503, 54500, France}
 
 \maketitle              % typeset the title of the contribution
 
