--- a/lenls/paper.tex
+++ b/lenls/paper.tex
@@ -50,11 +50,11 @@
 \tocauthor{Jiří Maršík and Maxime Amblard}
 %
 \institute{Université de Lorraine, Laboratoire lorrain de recherche en informatique et ses applications, UMR 7503, Vandoeuvre-lès-Nancy, 54500, France\\
-\email{\{jiri.marsik, maxime.amblard\}@loria.fr},\\
 \and
 INRIA, Villers-lès-Nancy, 54600, France\\
 \and
-CNRS, Loria, Vandoeuvre-lès-Nancy, UMR 7503, 54500, France}
+CNRS, Loria, Vandoeuvre-lès-Nancy, UMR 7503, 54500, France\\
+\email{\{jiri.marsik, maxime.amblard\}@loria.fr}}
 
 \maketitle              % typeset the title of the contribution
 
@@ -66,9 +66,6 @@ disparate linguistic constraints in a single ACG and propose a generalization
 of the formalism: Graphical Abstract Categorial Grammars.
 \keywords{abstract categorial grammars, grammar engineering, grammatical formalisms, formal grammars, computational linguistics}
 \end{abstract}
-
-
-\section{Motivation}
 
 Abstract Categorial Grammars (ACGs) \cite{de2001towards} have shown to be a
 viable formalism for elegantly encoding the dynamic nature of
@@ -314,11 +311,15 @@ preposition \emph{de} seen in (\ref{ex:aucun-deep-obj}) and
 compatible features on their types and will propagate the information
 carried in the features to its result type, e.g.:
 
+\vspace{-4ex}
+
 \begin{align*}
 N_{de_1} &: NP_{NEG{=}F} \limp N_{NEG{=}F} \limp N_{NEG{=}F} \\
 N_{de_2} &: NP_{NEG{=}F} \limp N_{NEG{=}T} \limp N_{NEG{=}T} \\
 N_{de_3} &: NP_{NEG{=}T} \limp N_{NEG{=}F} \limp N_{NEG{=}T}
 \end{align*}
+
+\vspace{-1ex}
 
 In the above, we elaborate the types $NP$ and $N$ with features ($_{NEG{=}F}$
 and $_{NEG{=}T}$) and we give the different types for the preposition \emph{de}
@@ -342,14 +343,18 @@ person or case, intuitively lead us to make our types even more specific.
 If we were to use this approach to write a grammar that enforces multiple
 constraints at the same time, we would end up with complicated types, like the
 one below, which provide complete specifications of the various possible
-situations (in this hypothetical grammar ($C$), the preposition \emph{de} has
-12 different types).
+situations (in this grammar ($C$), the preposition \emph{de} has 12 different
+types).
+
+\vspace{-4ex}
 
 $$
 C_{de_{11}} :\ NP_{\textcolor{red}{NEG{=}T}, \textcolor{green}{VAR{=}F}, \textcolor{blue}{NUM{=}PL}}
 \limp N_{\textcolor{red}{NEG{=}F},\textcolor{blue}{NUM{=}SG}}
 \limp N_{\textcolor{red}{NEG{=}T},\textcolor{blue}{NUM{=}SG}}
 $$
+
+\vspace{-1ex}
 
 This creates two problems. Firstly, the number of such types grows
 exponentially with the number of features added. This can be fixed by
@@ -379,7 +384,7 @@ the one on Figure~\ref{fig:gacg} where the constraint signatures delimit the
 legal syntactic structures independently of each other and without interfering
 with the syntax-semantics interface. However, ACG diagrams are limited to
 arborescences and we are obliged to generalize them in order to get
-the expected interpretation of Figure~\ref{fig:gacg}.
+the expected interpretation.
 
 
 \section{Graphical ACGs}
@@ -494,7 +499,7 @@ $\mathcal{E}_{\mathcal{D}}(Left)$ and
 $\mathcal{E}_{\mathcal{D}}(Right)$. However, these two do not have to share an
 antecedent in $\mathcal{E}_{\mathcal{D}}(Top)$. This contradicts the
 generative story one might imagine in which a single term from $Top$ generates
-terms in $Left$ and $Right$ which finally generate a term in $Bottom$.
+terms in $Left$ and $Right$ which generate a term in $Bottom$.
 
 We can observe another peculiarity on a more practical example. Consider the
 G-ACG in Figure~\ref{fig:gacg}. In classical ACGs, one can always take an
@@ -673,6 +678,8 @@ N_{que_1} &: (NP_{NEG{=}F} \limp S) \limp N_{NEG{=}F} \limp N_{NEG{=}F} \\
 N_{que_2} &: (NP_{NEG{=}F} \limp S) \limp N_{NEG{=}T} \limp N_{NEG{=}T} \\
 \end{align*}
 
+\vspace{-3ex}
+
 We see that the negative determiner \emph{aucun} can only attach to phrases
 which do not already contain a free negative determiner and that the resulting
 phrase is marked as having a free negative determiner. On the other hand, the
@@ -707,13 +714,17 @@ and $NP$ will be subdivided into $N_{NUM{=}SG}$, $N_{NUM{=}PL}$,
 $NP_{NUM{=}SG}$ and $NP_{NUM{=}PL}$ (we only treat number agreement in this
 example). Here are some example types:
 
+\vspace{-3ex}
+
 \begin{align*}
 A_{tatou} &: N_{NUM{=}SG} \\
 A_{tatous} &: N_{NUM{=}PL} \\
 A_{le} &: N_{NUM{=}SG} \limp NP_{NUM{=}SG} \\
 A_{les} &: N_{NUM{=}PL} \limp NP_{NUM{=}PL} \\
 A_{aime_1} &: NP_{NUM{=}SG} \limp NP_{NUM{=}SG} \limp S \\
-A_{aime_2} &: NP_{NUM{=}SG} \limp NP_{NUM{=}PL} \limp S \\
+A_{aime_2} &: NP_{NUM{=}SG} \limp NP_{NUM{=}PL} \limp S
+\end{align*}
+\begin{align*}
 A_{qui_1} &: (NP_{NUM{=}SG} \limp S) \limp N_{NUM{=}SG} \limp N_{NUM{=}SG} \\
 A_{qui_2} &: (NP_{NUM{=}PL} \limp S) \limp N_{NUM{=}PL} \limp N_{NUM{=}PL}
 \end{align*}
@@ -762,10 +773,10 @@ composing are not light-weight objects. They are usually defined by taking an
 existing signature that describes the language at a relevant level and by
 strengthening (usually all) the types of that signature to enforce the
 constraint\footnote{This makes the expressivity of model-theoretic syntactic
-  formalisms formalisms such as Interaction Grammars, in which adding the
-  lexical items for \emph{ne} and \emph{aucun} along with enforcing the $Neg$
-  constraint takes only two tree descriptions \cite{perrier2007french}, even
-  more striking when compared to our approach.}. However, most of these type
+  formalisms such as Interaction Grammars, in which adding the lexical items
+  for \emph{ne} and \emph{aucun} along with enforcing the $Neg$ constraint
+  takes only two tree descriptions \cite{perrier2007french}, even more
+  striking when compared to our approach.}. However, most of these type
 alterations are mundane and we believe that this is fertile ground for
 applying metagrammars.
 
@@ -780,7 +791,7 @@ the need for the increased expressivity. This embedding of syntactic
 constraints will contribute to an effort to define a syntax-semantics
 interface and later to build discourse structures.
 
-In the end, our approach us define the syntax in a clean way using the
+In the end, our approach lets us define the syntax in a clean way using the
 idiomatic style of categorial grammars (simple atomic types like $N$, $NP$ and
 $S$) and then define the constraints themselves the same way as they are
 defined in ACG research (such as is the case with
@@ -788,10 +799,11 @@ defined in ACG research (such as is the case with
 
 Interesting avenues of future work include: digging deeper into the
 language-theoretical properties of G-ACGs (Are ACG object languages closed on
-intersection? Are pangraphical languages expressible as extrinsic languages?),
-searching for a metagrammatical description of constraint signatures to ease
-work on G-ACG grammars and finally building large-scale grammars to verify the
-utility of our approach.
+intersection? Are extrinsic languages as expressive as pangraphical
+languages?), searching for a metagrammatical description of constraint
+signatures to ease work on G-ACG grammars and finally building large-scale
+grammars to verify the usability of our approach.
+
 
 %
 % ---- Bibliography ----
