LENLS: Final remark from Maxime

--- a/lenls/paper.tex
+++ b/lenls/paper.tex
@@ -505,7 +505,7 @@ We can observe another peculiarity on a more practical example. Consider the
 G-ACG in Figure~\ref{fig:gacg}. In classical ACGs, one can always take an
 element in a signature, like $Sem$, and by transduction find its corresponding
 element in an another signature, like $Syntax$. However, in a G-ACG such as
-this it, is possible that the $Syntax$ term we obtain by transduction does not
+this, it is possible that the $Syntax$ term we obtain by transduction does not
 belong to $\mathcal{E}_{\mathcal{G}}(Syntax)$ because it lacks antecedents in
 either $Constr_1$ or $Constr_2$. This means that the notion of an extrinsic
 language is not capable to give us the set of all meaning terms in $Sem$ which
